Rewrite to use Avaje + Spring / Deploy to Fly.io Instead of Heroku (#51)
* change constructor

* fly.io

* Update pom.xml

* Update ServerSecurityConfig.java

* cors pattern

* Update .gitignore

* remove snakeyaml

* remove starter json

* String[]

* Update RouterConfig.java

* Update ServerSecurityConfig.java

* records

* avajeAdapter

* compiles

* Update README.md

* runs

* dead end, but it was cool

* default reflect

* hey it works

* works with 17

* reactive driver

* Update README.md

* Update AvajeSpringAdapter.java

* remove javalin

* 19

* remove javalin

* Update application.properties

* reflect

* Revert docker agent

* Update main.yml

* 19

* more reflect config

* debug

* Update application.properties

* jdk 17

* Revert "jdk 17"

This reverts commit b7b216873ef1f0007d3adb34bdeab7c03f1d2de3.

* Update .gitignore

* Squashed commit of the following:

commit 0e7eaf083deb49ed61f82ec7a6d84b6fc36f26d1
Author: Josiah Noel <32279667+SentryMan@users.noreply.github.com>
Date:   Wed Oct 12 14:05:38 2022 -0400

    Revert "jdk 17"

    This reverts commit b7b216873ef1f0007d3adb34bdeab7c03f1d2de3.

commit b7b216873ef1f0007d3adb34bdeab7c03f1d2de3
Author: Josiah Noel <32279667+SentryMan@users.noreply.github.com>
Date:   Wed Oct 12 00:38:44 2022 -0400

    jdk 17

commit f5979c4f9b515cffcf0953aebbed6d9e337de378
Author: Josiah Noel <32279667+SentryMan@users.noreply.github.com>
Date:   Wed Oct 12 00:00:26 2022 -0400

    Update application.properties

commit 9152d234d491c5bd6e26be34f9eb575fa3e39234
Author: Josiah Noel <32279667+SentryMan@users.noreply.github.com>
Date:   Tue Oct 11 23:53:43 2022 -0400

    debug

commit 20a9fa30cf3cb0df79e21d2ffecc2cf8cb880f6e
Author: Josiah Noel <32279667+SentryMan@users.noreply.github.com>
Date:   Tue Oct 11 23:22:20 2022 -0400

    more reflect config

commit fb08aa3966fb00ce5c40259083866dcb7e0bf0db
Author: Josiah 